--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,7 +72,7 @@
 }
 
 .footer__office p {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -109,7 +109,7 @@
 }
 
 .footer__office-label {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: 300;
   font-size: 24px;
   line-height: 32px;
@@ -118,7 +118,7 @@
 }
 
 .footer__office-details {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
@@ -133,7 +133,7 @@
 }
 
 .footer__phone-number {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 24px;
   line-height: 32px;
