--- a/src/components/Main/Modals/Modal.css
+++ b/src/components/Main/Modals/Modal.css
@@ -1,6 +1,5 @@
 :root {
-  /* Задайте своё значение для основной линии */
-  --color-line-primary: #e0e0e0;
+  --color-line-primary: #E0E0E0;
 }
 
 .modal-overlay {
@@ -72,7 +71,7 @@
 }
 
 .modal-right p {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   font-weight: 300;
   line-height: 30px;
   margin: 15px 0 5px 0;
@@ -95,7 +94,7 @@
   padding: 16px;
   border: none;
   border-radius: 12px;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   font-size: 16px;
   width: 100%;
   background-color: #F5F3F0;
@@ -113,7 +112,7 @@
   top: -45px;
   left: 0;
   color: #ff0000;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 14px;
@@ -123,7 +122,7 @@
 }
 
 .policytext {
-  line-height: 120% !important;
+  line-height: 120% !important; 
   text-align: center;
   transition: all 0.3s ease;
 }
@@ -151,7 +150,6 @@ hr {
   }
 }
 
-/* Адаптация для мобильных устройств (до 768px) */
 @media (max-width: 768px) {
   .modal-overlay {
     align-items: flex-start;
