--- a/src/components/Main/Pages/Home/Greeting/Greeting.css
+++ b/src/components/Main/Pages/Home/Greeting/Greeting.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100vw;
   align-items: center;
   text-align: center;
   background-color: var(--color-main-white);
