--- a/src/components/Main/Pages/About/Presentation/Presentation.css
+++ b/src/components/Main/Pages/About/Presentation/Presentation.css
@@ -117,7 +117,7 @@
   position: absolute;
   top: -15px;
   left: 0;
-  color: #ff0000;
+  color: #cc0d0d;
   font-family: "Helvetica", sans-serif;
   font-size: 14px;
   font-weight: 300;
