--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,11 +3,15 @@
 
 :root {
   font-size: 16px;
-  background-color: white; /* замените на ваш цвет, если нужно */
+  background-color: var(--color-main-white);
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 h1 {
@@ -18,7 +22,6 @@ h1 {
   letter-spacing: -3px;
 }
 
-/* Мобильная адаптация (до 768px) */
 @media (max-width: 768px) {
   body {
     padding: 0 1px;
