--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,4 @@
-/* Подключение Helvetica Neue */
+/* Helvetica Neue */
 @font-face {
   font-family: 'Helvetica';
   src: url('/src/fonts/Helvetica/helvetica-light-587ebe5a59211.ttf') format('truetype');
@@ -20,7 +20,7 @@
   font-style: normal;
 }
 
-/* Подключение TT Travels */
+/* TT Travels */
 @font-face {
   font-family: 'TT Travels';
   src: url('/src/fonts/Travels/TT Travels Trial Regular.otf') format('opentype');
@@ -42,15 +42,15 @@
   font-style: normal;
 }
 
-/* CSS-переменные */
+
+
 :root {
   /* Цвета фона */
   --color-main-white: #FAF8F5;
  
-
   /* Цвета бренда */
   --color-brand-green: #A0A747;
-  --color-brand-brown: #773844;
+  --color-brand-brown: #1A1A1A;
   --color-brand-blue: #1F2057;
   --color-brand-blue-2: #465587;
   --color-brand-cyan: #77DFE9;
@@ -59,7 +59,7 @@
   --color-brand-orange: #BE6833;
 
   /* Цвета текста */
-  --color-text-primary: #773844;
+  --color-text-primary: #1A1A1A;
   --color-text-grey: #646562;
 
   /* Цвета линий */
